--- a/components/HomeHero.module.css
+++ b/components/HomeHero.module.css
@@ -71,8 +71,8 @@
 
 @media (min-width: 768px) {
   .contentInner {
-    max-width: 88vw;
-    padding: 0 64px 80px calc(var(--gutter) + 24px);
+    max-width: min(88vw, calc(100vw - 48px));
+    padding: 0 48px 80px calc(var(--gutter) + 24px);
   }
 }
 
